--- a/BookShare.MVC/Views/Categorias/Create.cshtml
+++ b/BookShare.MVC/Views/Categorias/Create.cshtml
@@ -27,7 +27,8 @@
 
                         <div class="form-group">
                             <div class="col-md-12">
-                                <input type="submit" value="Create" class="btn btn-warning col-md-12" />
+                                <input type="submit" value="Create" class="btn btn-primary col-md-5" />
+                                <a href='@Url.Action("Index", "Categoria")' class="btn btn-danger col-md-5 col-md-offset-2">Cancelar</a>
                             </div>
                         </div>
                     </div>
