--- a/BookShare.MVC/Content/Site.css
+++ b/BookShare.MVC/Content/Site.css
@@ -7,7 +7,9 @@
     margin-top: 20px;
     text-decoration: none;
 }
-
+.container-details {
+    background-color: white;
+}
 .btn-home, .navbar-right {
     list-style: none;
 }
@@ -20,6 +22,10 @@
 }
 .container-fluid {
     margin-top: 30px;
+}
+
+.img-card {
+    width: 100%;
 }
 /* Set padding to keep content from hitting the edges */
 /*.body-content {
