--- a/BookShare.MVC/Views/Categorias/Delete.cshtml
+++ b/BookShare.MVC/Views/Categorias/Delete.cshtml
@@ -1,26 +1,40 @@
 ﻿@model BookShare.MVC.Models.CategoriaViewModel
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>CategoriaViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
+@section styles{
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
+    <style>
+        .form-actions {
+            padding-bottom: 2em;
+        }
+    </style>
+}
+<div class="container-fluid container-login">
+<div class="row">
+    <div class="col-md-12">
+        <h3>Você tem certeza que deseja deletar essa categoria?</h3>
+        <div>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </dt>
 
-    </dl>
+                <dd>
+                    @Html.DisplayFor(model => model.Nome)
+                </dd>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+            </dl>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-actions no-color">
+                    <input type="submit" value="Confirmar" class="btn btn-danger" />
+                    <a href='@Url.Action("Index", "Categorias")' class="btn btn-default">Voltar</a>
+
+                </div>
+            }
         </div>
-    }
+    </div>
 </div>
