--- a/BookShare.MVC/Views/Categorias/Details.cshtml
+++ b/BookShare.MVC/Views/Categorias/Details.cshtml
@@ -1,20 +1,37 @@
 ﻿@model BookShare.MVC.Models.CategoriaViewModel
 
-<div>
-    <h4>CategoriaViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
+@section styles{
+    <style>
+        .btn {
+            margin-top: 2em;
+        }
+    </style>
+}
 
-    </dl>
+<div class="container-fluid container-details">
+    <div class="row">
+        <div class="col-md-12">
+            <div>
+                <h4>Informações</h4>
+                <hr />
+                <article>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Nome)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Nome)
+                    </dd>
+                </article>
+            </div>
+            <p>
+                @*@Html.ActionLink("Edit", "Edit", new { id = Model.CategoriaId }) |
+                    @Html.ActionLink("Back to List", "Index")*@
+                <a href="/Categorias/Edit/@Model.CategoriaId" class="btn btn-primary">Editar</a>
+                <a href="/Categorias/Delete/@Model.CategoriaId" class="btn btn-danger">Excluir</a>
+                <a href='@Url.Action("Index", "Categorias")' class="btn btn-default">Voltar</a>
+            </p>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CategoriaId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
