--- a/BookShare.MVC/Views/Categorias/Edit.cshtml
+++ b/BookShare.MVC/Views/Categorias/Edit.cshtml
@@ -23,7 +23,8 @@
 
                         <div class="form-group">
                             <div class="col-md-12">
-                                <input type="submit" value="Salvar" class="btn btn-warning col-md-12" />
+                                <input type="submit" value="Salvar" class="btn btn-primary col-md-5" />
+                                <a href='@Url.Action("Index", "Categorias")' class="btn btn-danger col-md-5 col-md-offset-2">Cancelar</a>
                             </div>
                         </div>
                     </div>
