--- a/BookShare.MVC/Views/Livros/Create.cshtml
+++ b/BookShare.MVC/Views/Livros/Create.cshtml
@@ -11,9 +11,7 @@
     </style>
 
 }
-<script>
-    Document.GetElementById("file").TextContent = "Enviar Foto";
-</script>
+
 @{
     ViewBag.Title = "Criar";
 }
@@ -72,7 +70,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
-                            <input type="submit" value="Create" class="btn btn-primary col-md-5" />
+                            <input type="submit" value="Salvar" class="btn btn-primary col-md-5" />
                             <a href='@Url.Action("Index", "Livros")' class="btn btn-danger col-md-5 col-md-offset-2">Cancelar</a>
 
                         </div>
