--- a/BookShare.MVC/Views/Livros/Delete.cshtml
+++ b/BookShare.MVC/Views/Livros/Delete.cshtml
@@ -3,78 +3,43 @@
 @{
     ViewBag.Title = "Delete";
 }
+@section styles{
 
-<h2>Delete</h2>
+    <style>
+        .form-actions {
+            padding-bottom: 2em;
+        }
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>LivroViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Titulo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Titulo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Sinopse)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Sinopse)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Isbn)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Isbn)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AnoLancamento)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AnoLancamento)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AutorId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Autor.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CategoriaId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Categoria.Nome)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EditoraId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Editora.Nome)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    </style>
     }
-</div>
+    <div class="container-fluid container-details">
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Você tem certeza que deseja deletar?</h3>
+                <div>
+                    <hr />
+                    <article>
+                        <dl>
+                            <dt>
+                                @Html.DisplayNameFor(model => model.Titulo)
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Titulo)
+                            </dd>
+                        </dl>
+
+                    </article>
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+
+                        <div class="form-actions no-color">
+                            <input type="submit" value="Confirmar" class="btn btn-danger" />
+                            <a href='@Url.Action("Index", "Livros")' class="btn btn-default">Voltar</a>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
