--- a/BookShare.MVC/Views/Categorias/Create.cshtml
+++ b/BookShare.MVC/Views/Categorias/Create.cshtml
@@ -12,24 +12,22 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3 container-login">
                 <div class="form-horizontal">
-                    <div class="form-horizontal">
-                        <h4>@ViewBag.Title</h4>
-                        <hr />
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <p>@Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label" })</p>
+                    <h4>@ViewBag.Title</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <p>@Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label" })</p>
 
-                                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
-                            </div>
+                            @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <input type="submit" value="Create" class="btn btn-primary col-md-5" />
-                                <a href='@Url.Action("Index", "Categoria")' class="btn btn-danger col-md-5 col-md-offset-2">Cancelar</a>
-                            </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <input type="submit" value="Create" class="btn btn-primary col-md-5" />
+                            <a href='@Url.Action("Index", "Categorias")' class="btn btn-danger col-md-5 col-md-offset-2">Cancelar</a>
                         </div>
                     </div>
                 </div>
