--- a/BookShare.MVC/Views/Categorias/Edit.cshtml
+++ b/BookShare.MVC/Views/Categorias/Edit.cshtml
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3 container-login">
                 <div class="form-horizontal">
-                    <h4>Editar Categoria</h4>
+                    <h4>Alterar Categoria</h4>
                     <hr />
                     <div class="form-horizontal">
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
