--- a/BookShare.MVC/Views/Editoras/Details.cshtml
+++ b/BookShare.MVC/Views/Editoras/Details.cshtml
@@ -4,23 +4,28 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div class="container-fluid container-details">
+    <div class="row">
+        <div class="col-md-12">
+            <div>
+                <h4>Informações</h4>
+                <hr />
+                <dl>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Nome)
+                    </dt>
 
-<div>
-    <h4>EditoraViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Nome)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-
-    </dl>
+                </dl>
+            </div>
+            <p>
+                <a href="/Editoras/Edit/@Model.EditoraId" class="btn btn-primary">Editar</a>
+                <a href="/Editoras/Delete/@Model.EditoraId" class="btn btn-danger">Excluir</a>
+                <a href='@Url.Action("Index", "Editoras")' class="btn btn-default">Voltar</a>
+            </p>
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.EditoraId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
