--- a/BookShare.MVC/Views/Account/Register.cshtml
+++ b/BookShare.MVC/Views/Account/Register.cshtml
@@ -74,6 +74,9 @@
                     @Html.LabelFor(m => m.Password, new { @class = "control-label" })
                     <br />
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+
+
                 </div>
             </div>
             <div class="form-group">
@@ -81,6 +84,9 @@
                     @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
                     <br />
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+
+
                 </div>
             </div>
             <div class="form-group">
