--- a/BookShare.MVC/Views/Editoras/Create.cshtml
+++ b/BookShare.MVC/Views/Editoras/Create.cshtml
@@ -12,15 +12,15 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
+                        <div class="col-md-12">
+                            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label" })
                             @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <div class="col-md-offset-2 col-md-12">
+                        <div class="col-md-12">
                             <input type="submit" value="Create" class="btn btn-primary col-md-5" />
                             <a href='@Url.Action("Index", "Editoras")' class="btn btn-danger col-md-5 col-md-offset-2">Cancelar</a>
                         </div>
