--- a/BookShare.MVC/Views/Livros/Details.cshtml
+++ b/BookShare.MVC/Views/Livros/Details.cshtml
@@ -26,7 +26,7 @@
                 <h2>@Html.DisplayFor(model => model.Titulo)</h2>
             </div>
             <div class="col-md-6">
-                <img src="/@Html.DisplayFor(model => model.Foto)" border="0" class="img-card col-md-12" />
+                <img src="@Html.DisplayFor(model => model.Foto)" border="0" class="img-card col-md-12" />
             </div>
             <div class="col-md-6">
                 <article>
@@ -39,13 +39,13 @@
                             @Html.DisplayFor(model => model.Titulo)
                         </dd>
 
-                        <p>
+                        <dt>
                             @Html.DisplayNameFor(model => model.Sinopse)
-                        </p>
+                        </dt>
 
-                        <p>
+                        <dd>
                             @Html.DisplayFor(model => model.Sinopse)
-                        </p>
+                        </dd>
 
                         <dt>
                             @Html.DisplayNameFor(model => model.Isbn)
